--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "predev": "npm run typegen",
+    "prebuild": "npm run typegen",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "typegen": "sanity schema extract --path=sanity/schema.json && sanity typegen generate"
   },
   "dependencies": {
     "@sanity/image-url": "^1.2.0",
