--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "dependencies": {
     "@sanity/image-url": "^1.2.0",
     "@sanity/vision": "^4.18.0",
-    "next": "16.0.3",
+    "next": "^16.0.7",
     "next-sanity": "^11.6.8",
     "react": "19.2.0",
     "react-dom": "19.2.0",
